--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "PK-XMD",
+  "name": "Pepo-XMD",
   "description": "Javascript WhatsApp bot made by novaxmd",
   "logo": "https://files.catbox.moe/fgiecg.jpg",
   "keywords": ["PK-XMD"],
