--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@vitalets/google-translate-api": "^9.2.1",    
+    "@vitalets/google-translate-api": "^9.2.1",
     "pino": "^9.7.0",
     "pm2": "^6.0.8",
     "util": "^0.12.5",
-    "express": "^5.1.0   ",
+    "express": "^5.1.0",
     "moment-timezone": "^0.6.0",
     "axios": "^1.9.0",
     "file_size_url": "1.0.6",
@@ -33,13 +33,15 @@
     "megajs": "^1.3.7",
     "wa_set_pkg": "1.0.5",
     "wa-sticker-formatter": "^4.4.4",
-    "path": "^0.12.7",
     "jimp": "^0.16.1",
     "adm-zip": "^0.5.16",
     "cheerio": "^1.0.0-rc.12",
     "qrcode-terminal": "^0.12.0",
-    "yt-search":"2.13.1",
+    "yt-search": "2.13.1",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
+  },
+  "overrides": {
+    "file-type": "15.0.0"
   }
 }
