--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "cheerio": "^1.0.0-rc.12",
     "qrcode-terminal": "^0.12.0",
     "yt-search": "2.13.1",
+    "youtube-yts": "^2.0.0",
+    "youtubedl-core": "^4.11.7",
+    "yt-search": "^2.12.1",
+    "ytdl-core": "^4.11.5"
     "ruhend-scraper": "^8.3.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
