--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "restart": "pm2 restart PK-XMD"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "github:Jeliostarr/DEV-Baileys#main",
+    "@whiskeysockets/baileys": "^6.7.18",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
@@ -36,13 +36,10 @@
     "adm-zip": "^0.5.16",
     "cheerio": "^1.0.0-rc.12",
     "qrcode-terminal": "^0.12.0",
-    "youtube-yts": "^2.0.0",
-    "youtubedl-core": "^4.11.7",
-    "yt-search": "^2.12.1",
-    "ytdl-core": "^4.11.5"
+    "yt-search": "2.13.1",
     "ruhend-scraper": "^8.3.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "acrcloud": "^1.4.0"
   }
-}
+  }
